fix startup error due to message manager using java 9+ stuff